[gd_scene load_steps=9 format=2]

[ext_resource path="res://bg.png" type="Texture" id=1]
[ext_resource path="res://cookiePressed.png" type="Texture" id=2]
[ext_resource path="res://cookie.png" type="Texture" id=3]
[ext_resource path="res://topBar.png" type="Texture" id=4]
[ext_resource path="res://scene/game.gd" type="Script" id=5]
[ext_resource path="res://shopButton.png" type="Texture" id=6]
[ext_resource path="res://menuBg.png" type="Texture" id=7]
[ext_resource path="res://closeButton.png" type="Texture" id=8]

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -5

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
position = Vector2( 240, 397.5 )
scale = Vector2( 1, 1.01375 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="CanvasLayer"]
position = Vector2( 236, 50.5 )
scale = Vector2( 1.0375, 1.04545 )
texture = ExtResource( 4 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 91.0
margin_top = 263.0
margin_right = 391.0
margin_bottom = 563.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )

[node name="Cookies" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.897
margin_left = 160.0
margin_top = 18.0
margin_right = 320.0
margin_bottom = 92.0
text = "0
"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="."]
process_mode = 0
autostart = true

[node name="CookiesSecond" type="Label" parent="."]
margin_left = 236.0
margin_top = 88.0
margin_right = 276.0
margin_bottom = 117.0
text = "0"

[node name="TextureButton2" type="TextureButton" parent="."]
margin_left = 353.0
margin_top = 701.0
margin_right = 483.0
margin_bottom = 831.0
texture_normal = ExtResource( 6 )

[node name="cookieOneClick" type="Label" parent="."]
anchor_left = -0.05
anchor_top = -0.653
anchor_right = -0.05
anchor_bottom = -0.653
margin_left = 76.0
margin_top = 67.0
margin_right = 116.0
margin_bottom = 81.0

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="MenuBg" type="Sprite" parent="CanvasLayer2"]
position = Vector2( 240, 452 )
scale = Vector2( 1, 1.34706 )
texture = ExtResource( 7 )

[node name="exit" type="TextureButton" parent="CanvasLayer2"]
margin_left = 72.0
margin_top = 225.0
margin_right = 92.0
margin_bottom = 245.0
texture_normal = ExtResource( 8 )
expand = true

[node name="TopBar" type="Sprite" parent="CanvasLayer2"]
position = Vector2( 240, 286 )
scale = Vector2( 0.7, 0.381818 )
texture = ExtResource( 4 )

[node name="buy" type="TextureButton" parent="CanvasLayer2"]
margin_left = 72.0
margin_top = 265.0
margin_right = 114.0
margin_bottom = 307.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="CanvasLayer2"]
margin_left = 176.0
margin_top = 267.0
margin_right = 287.0
margin_bottom = 298.0
text = "KUPI ODIN CLICK
      20 cookie"

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="CanvasLayer2/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="CanvasLayer2/buy" to="." method="_on_buy_pressed"]
